# agent-evals

./: .gitignore  README.md  pyproject.toml  support_agent.py
evals/: __init__.py  dataset.py  judge.py  run.py  scorers.py  types.py
evaluation/: __init__.py  golden_dataset.py  models.py  quality_judge.py  runner.py  scoring.py
tests/: test_evaluation.py  test_stage3.py
